<resources>
    <string name="app_name">IT Crowd Demo App</string>
    <string name="main_title">IT Crowd Forecast Demo</string>
    <string name="main_search_city">Ingresar ciudad</string>
    <string name="title_activity_itcmaps">Map</string>
    <string name="main_show_map">Ver Mapa</string>
    <string name="main_forecast_min">MIN: </string>
    <string name="main_forecast_max">MAX: </string>
    <string name="main_forecast_temp">00</string>
    <string name="main_forecast_pressure">Pressure: </string>
    <string name="main_forecast_humidity">Humidity:</string>

    <string name="main_error_net">Ocurrio un error en la conexión, por favor intentelo nuevamente</string>
    <string name="main_last_searchs">Ultimas 5 busquedas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
